h2. Change Log

h3. v0.4.2 - 2010-08-20
* Fixes "GRAILSPLUGINS-2399":http://jira.codehaus.org/browse/GRAILSPLUGINS-2399 - Better error handling in case config is missing
* Fixes "GRAILSPLUGINS-2398":http://jira.codehaus.org/browse/GRAILSPLUGINS-2398 - Documentation fixes

h3. v0.4.1 - 2010-08-13
* automatically injected version property now marked transient (it is automatically injected to work with scaffolding)

h3. v0.4 - 2010-08-12
* switched to global AST transformations, so no more annotations for mongo domains needed, *MongoEntity deprecated*
* updated to grails 1.3.4
* mongo artefacts are of type "MongoDomain" again. Plugin works with hibernate again
* updated petclinic

h3. v0.3.2 - 2010-07-20
* updated morphia library
* added support for index mapping

h3. v0.3 - 2010-07-04
* added update method
* updated morphia to latest snapshot (revision 600)
* tested with Grails 1.3.2
* added code-coverage plugin (code not fully covered yet)

h3. v0.2.1 - 2010-06-17
* cleaned up code, small fixes
* Mongo domains are now registered as "Domain" artefacts only
* Tested with hibernate: gorm-mongodb is not working with hibernate plugin
* Updated petclinic sample application

h3. v0.2 - 2010-06-15
* added ast transformations to mongo entities. id, version and needed annotations are injected automatically
* mongo entities now have to be annotated with grails.plugins.mongodb.MongoEntity
* updated morphia and mongodb-java-driver libraries. morphia now supports lazy referencing via @Reference(lazy=true)
* MongoDB 1.5 support
* generate-all now works with MongoEntity classes

h3. v0.1.2 - 2010-06-08
* added a mongo bean to access the preconfigured driver and mapper

h3. v0.1.1 - 2010-06-07
* renamed static delete method to deleteAll in order to avoid "conflicts":http://jira.codehaus.org/browse/GROOVY-4239
* plugin published to the grails plugin repository
* added user guide

h3. v0.1 - 2010-06-05
* initial release