@@ -9,7 +9,7 @@ import grails.plugins.mongodb.MongoDomainClassArtefactHandler
 
 class GormMongodbGrailsPlugin {
   // the plugin version
-  def version = "0.4.2"
+  def version = "0.4.3"
   // the version or versions of Grails the plugin is designed for
   def grailsVersion = "1.3 > *"
   // the other plugins this plugin depends on
