@@ -2,6 +2,6 @@
 #Thu Aug 12 18:06:52 CEST 2010
 app.grails.version=1.3.4
 app.name=gorm-mongodb
-app.version=0.4.2
+app.version=0.4.3
 plugins.code-coverage=1.1.8
 plugins.tomcat=1.3.4
