@@ -1,4 +1,4 @@
-<plugin name='gorm-mongodb' version='0.4' grailsVersion='1.3 &gt; *'>
+<plugin name='gorm-mongodb' version='0.4.2' grailsVersion='1.3 &gt; *'>
   <author>Juri Kuehn</author>
   <authorEmail>juri.kuehn at gmail.com</authorEmail>
   <title>Grails MongoDB plugin</title>
